@@ -1,6 +1,7 @@
 version <unreleased>
 
 Extractors
+- [thvideo] Remove extractor (#10464)
 * [movingimage] Fix for the new site name (#10466)
 
 
